6.0
	+ Group-based user authentication for commercial editions
	+ Remove adzapper integration as it is no longer maintained in 18.04
	+ HTTPS block rules are evaluated first and packets are rejected
5.1
	+ Use IP ranges in squid and dansguardian conf for very significant
	  increase of performance when restarting the module
	+ Block HTTPS by domain using firewall module for commercial editions
	+ Fix time period condition checking end minute
5.0.3
	+ Fix regression in transparent proxy mode with filter
5.0.2
	+ Fix dansguardian integration
5.0.1
	+ Integration with antivirus module
	+ Fix module restart in postinst
5.0
	+ Set version to 5.0
	+ Remove no longer maintained Active Directory integration
4.0.1
	+ Fix configuration for external AD
	+ Do not listen on internal interfaces
4.0
	+ Remove ads on deprecated features
	+ Set version to 4.0
	+ Added dynamical group authorization
	+ Do not lowercase user names if kerberos is used
	+ Fix exception accesing the access rules model when samba not provisioned
	+ Fixed populateGroups() in AccessRules when upgrading from 3.4
	+ Fixed wrong old-style try-catch
3.5.1
	+ Remove categorized domains temporary files
3.5
	+ Fixed generated rules for blanket domain deny
	+ Adapted to samba4 instead of OpenLDAP
	+ Set version to 3.5
	+ Speed up external AD connection using persistence
	+ Allow dansguardian user to read categories lists files
3.4
	+ Give support to multiple addresses for a domain in Transparent
	  Proxy Exemptions
	+ Save modules configurations after initialSetup
	+ Added all subdomains in cache exemptions
	+ Deny cache explicitly from cache exemption domains
	+ Give support to optional ABORTED flag in denied requests when
	  the HTTP client aborts the request
	+ Adapt configuration for squid 3.3.8
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Forced 644 permission on Dansguardian files to avoid zombie processes